remove borders on mobile and fix height on mobile

--- a/theme/static/css/borders.css
+++ b/theme/static/css/borders.css
@@ -2,53 +2,56 @@
   position: relative;
 }
 
-#left-border {
-  position: absolute;
-  left: -10px;
-  background: url("/theme/images/mid-left-border.png") repeat-y scroll;
-  height: 100%;
-  width: 10px;
-}
+/* they look ugly on mobile idk */
+@media (min-width: 1000px) {
+  #left-border {
+    position: absolute;
+    left: -10px;
+    background: url("/theme/images/mid-left-border.png") repeat-y scroll;
+    height: 100%;
+    width: 10px;
+  }
 
-#right-border {
-  position: absolute;
-  right: -10px;
-  background: url("/theme/images/mid-right-border.png") repeat-y scroll;
-  height: 100%;
-  width: 10px;
-}
+  #right-border {
+    position: absolute;
+    right: -10px;
+    background: url("/theme/images/mid-right-border.png") repeat-y scroll;
+    height: 100%;
+    width: 10px;
+  }
 
-#top-left-border {
-  position: absolute;
-  background: url("/theme/images/top-left-border.png");
-  height: 130px;
-  width: 10px;
-  z-index: 2;
-}
+  #top-left-border {
+    position: absolute;
+    background: url("/theme/images/top-left-border.png");
+    height: 130px;
+    width: 10px;
+    z-index: 2;
+  }
 
-#top-right-border {
-  position: absolute;
-  background: url("/theme/images/top-right-border.png");
-  height: 130px;
-  width: 10px;
-  z-index: 2;
-}
+  #top-right-border {
+    position: absolute;
+    background: url("/theme/images/top-right-border.png");
+    height: 130px;
+    width: 10px;
+    z-index: 2;
+  }
 
-#bottom-left-border {
-  position: absolute;
-  background: url("/theme/images/bottom-left-border.png");
-  height: 130px;
-  width: 10px;
-  z-index: 2;
-  bottom: 0px;
-}
+  #bottom-left-border {
+    position: absolute;
+    background: url("/theme/images/bottom-left-border.png");
+    height: 130px;
+    width: 10px;
+    z-index: 2;
+    bottom: 0px;
+  }
 
-#bottom-right-border {
-  position: absolute;
-  background: url("/theme/images/bottom-right-border.png");
-  height: 130px;
-  width: 10px;
-  z-index: 2;
-  bottom: 0px;
-  right: 0px;
+  #bottom-right-border {
+    position: absolute;
+    background: url("/theme/images/bottom-right-border.png");
+    height: 130px;
+    width: 10px;
+    z-index: 2;
+    bottom: 0px;
+    right: 0px;
+  }
 }
